@@ -21,6 +21,18 @@ Bugs that need fixing:
  - 'grep foo$ file' doesn't work
  - 'grep *foo file' segfaults
  - ps dirent race bug (need to stat the file before attempting chdir)
+ - The following commands segfault:
+	chmod -R
+	chown -R
+	chgrp -R
+	cp -a -a
+	ln -s -s
+	rm -f
+	touch -c
+  - I believe that swaponoff may also be also broken (check it).
+  - It used to be that BusyBox tar would happily overwrite existing files on
+  an extraction.  However, as of 0.42, BusyBox tar simply dies as soon as an 
+  existing file is found.
 
 
 -----------
